fix: change z-index value for background

--- a/src/components/background/background.module.css
+++ b/src/components/background/background.module.css
@@ -1,6 +1,6 @@
 .background {
   position: absolute;
   inset: 0;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
 }
